--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
     margin: -150px 0 0 -150px;
     top: 30%;
     left: 50%;
-    padding:10px 10px 10px 10px
+    padding:10px 10px 10px 10px;
+    background-color:#ececec;
 }
 
 #screen {
@@ -22,7 +23,7 @@
     border-radius: 2px;
     height: 50px;
     width: 276px;
-    margin:10px 10px 10px 10px
+    margin:10px 10px 10px 10px;
 }
 
 #keypad{
@@ -37,7 +38,9 @@ button{
     width: 60px;
     margin: 5px 3.4px 5px 3.3px;
     font-size: 20px;
-    font-weight: bold
+    font-weight: bold;
+    background: #d9d9d9;
+
 
     }
 
@@ -49,4 +52,8 @@ button{
 
 #clearscreen {
     background: #F98181;
+    }
+
+#operator {
+    background: #b3b3b3;
     }
